--- a/pages/brand-medicine-card-no-recipe.html
+++ b/pages/brand-medicine-card-no-recipe.html
@@ -300,7 +300,7 @@
 
   <!-- Carousel -->
   <div class="container max-width mt-4">
-      <h1 class="font-size-20">Медицинская техника</h1>
+      <h1 class="font-size-20">Аналоги</h1>
   </div>
   <div class="container carousel">
       <div id="carousel-1" class="carousel slide" data-bs-ride="carousel">
@@ -573,7 +573,7 @@
 
   <!-- Carousel -->
   <div class="container max-width mt-4">
-      <h1 class="font-size-20">Медицинская техника</h1>
+      <h1 class="font-size-20">Недавно просмотренные</h1>
   </div>
   <div class="container carousel">
       <div id="carousel-2" class="carousel slide" data-bs-ride="carousel">
