--- a/pages/brand-medicine-card-order-no-recipe.html
+++ b/pages/brand-medicine-card-order-no-recipe.html
@@ -298,7 +298,7 @@
 
   <!-- Carousel -->
   <div class="container max-width mt-4">
-      <h1 class="font-size-20">Медицинская техника</h1>
+      <h1 class="font-size-20">Аналоги</h1>
   </div>
   <div class="container carousel">
       <div id="carousel-2" class="carousel slide" data-bs-ride="carousel">
@@ -571,7 +571,7 @@
 
   <!-- Carousel -->
   <div class="container max-width mt-4">
-      <h1 class="font-size-20">Медицинская техника</h1>
+      <h1 class="font-size-20">Недавно просмотренные</h1>
   </div>
   <div class="container carousel">
       <div id="carousel-3" class="carousel slide" data-bs-ride="carousel">
