--- a/pages/medicine-card-order-norecipe.html
+++ b/pages/medicine-card-order-norecipe.html
@@ -298,7 +298,7 @@
 
 <!-- Carousel -->
 <div class="container max-width mt-4">
-  <h1 class="font-size-20">Медицинская техника</h1>
+  <h1 class="font-size-20">Аналоги</h1>
 </div>
 <div class="container carousel">
   <div id="carousel-1" class="carousel slide" data-bs-ride="carousel">
@@ -569,7 +569,7 @@
 
 <!-- Carousel -->
 <div class="container max-width mt-4">
-  <h1 class="font-size-20">Медицинская техника</h1>
+  <h1 class="font-size-20">Недавно просмотренные</h1>
 </div>
 <div class="container carousel">
   <div id="carousel-1" class="carousel slide" data-bs-ride="carousel">
