--- a/pages/brand-good-card.html
+++ b/pages/brand-good-card.html
@@ -153,11 +153,10 @@
             <div class="eye"></div>
             <div><p>1525454</p></div>
             </div>
-           <div class="medicine-name-boxes-first-box">
-             <div class="draft-medicine-name-box-1">
+            <div class="medicine-name-boxes-first-box">
+              <img src="https://via.placeholder.com/260x260?text=260x260" class="img-fluid" alt="260x260">
+              <p>Внешний вид товара может отличаться от изображения на сайте</p>
             </div>
-            <p>Внешний вид товара может отличаться от изображения на сайте</p>
-          </div>
         </div>
           <div class="medicine-name-box-2">
             <p>Название товара</p>
