--- a/pages/brand-medicine-card-recipe.html
+++ b/pages/brand-medicine-card-recipe.html
@@ -36,6 +36,7 @@
           </div>
         </div>
       </div>
+      
 
   <!-- Top - 1/layer - 1 finished -->
 
@@ -154,7 +155,7 @@
               <div><p>1525454</p></div>
             </div>
           <div class="medicine-name-boxes-first-box">
-            <div class="medicine-name-box-1">260x260</div>
+            <img src="https://via.placeholder.com/260x260?text=260x260" class="img-fluid" alt="260x260">
             <p>Внешний вид товара может отличаться от изображения на сайте</p>
           </div>
         </div>
