--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 <body>
 
 <!-- Header -->
-<div class="container top-layer max-width">
+<div class="container top-layer">
     <div class="row align-items-center header">
         <div class="col">
               <span class="header__phone">
-                <i class="fas fa-phone-alt"></i> <strong>+998971005622</strong>
+                    <a href="tel:998971005622">
+                        <i class="fas fa-phone-alt"></i><strong>+998971005622</strong>
+                    </a>
               </span>
         </div>
         <div class="col text-center header__logo">
@@ -30,10 +32,10 @@
         </div>
         <div class="col">
             <div class="text-end header__links">
-                <a href="#" class="header__profile">
+                <a href="./pages/profile.html" class="header__profile">
                     <i class="fas fa-user"></i> Личный кабинет
                 </a>
-                <a href="#" class="header__register">
+                <a href="./pages/register.html" class="header__register">
                     <i class="fas fa-lock login-icon"></i> Регистрация
                 </a>
             </div>
@@ -43,36 +45,46 @@
 <!-- /Header -->
 
 <!-- Search -->
-<section class="search-color">
+<section class="search primary-bg-color">
     <div class="container max-width">
         <div class="row">
             <div class="col">
-                <div class="d-flex search">
-                    <!-- Search input -->
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <button class="btn btn-outline-secondary dropdown-toggle btn-dropdown" type="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i
-                                    class="fas fa-bars hamburger-menu"></i>Выбрать категорию
+                <form action="/server.php" method="GET">
+                    <div class="d-flex align-items-center search">
+                        <!-- Search input -->
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <button class="btn btn-outline-secondary dropdown-toggle btn-dropdown" type="button"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                        id="category-dropdown" data-bs-toggle="dropdown">
+                                    <i class="fas fa-bars hamburger-menu"></i>Выбрать категорию
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="category-dropdown">
+                                    <a class="dropdown-item" href="#">Категория 1</a>
+                                    <a class="dropdown-item" href="#">Категория 2</a>
+                                    <a class="dropdown-item" href="#">Категория 3</a>
+                                </div>
+                            </div>
+                            <input type="text" class="form-control" aria-label="Text input with dropdown button"
+                                   placeholder="Поиск товаров...">
+                            <button type="submit" class="btn btn-link search-position">
+                                <i class="fa fa-search"></i>
                             </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                                <div role="separator" class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Separated link</a>
+                            <button type="reset" class="btn btn-link search-position cross-icon d-none">
+                                <i class="fa fa-times"></i>
+                            </button>
+                            <div class="d-flex align-items-center">
+                                <a href="#">
+                                    <img src="./images/favorite-icon.svg" alt="Favorite icon">
+                                </a>
+                                <a href="#" class="ps-2">
+                                    <img src="./images/cart-icon.svg" alt="Cart icon">
+                                </a>
                             </div>
                         </div>
-                        <input type="text" class="form-control" aria-label="Text input with dropdown button"
-                               placeholder="Поиск товаров...">
-                        <i class="fa fa-search search-position"></i>
-                        <div class="icons d-flex">
-                            <a href="#"><i class="far fa-heart fa-2x coloring"></i></a>
-                            <a href="#"><i class="fas fa-shopping-cart fa-2x coloring"></i></a>
-                        </div>
+                        <!-- /Search input -->
                     </div>
-                    <!-- /Search input -->
-                </div>
+                </form>
             </div>
         </div>
     </div>
@@ -80,17 +92,18 @@
 <!-- /Search -->
 
 <!-- Categories -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container max-width">
+<nav class="navbar navbar-expand-lg navbar-light bg-light category-list">
+    <div class="container">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">
-                        <i class="fas fa-stethoscope  icon-size"></i><span>ЛЕКАРСТВЕННЫЕ ПРЕПАРАТЫ</span></a>
+                        <i class="fas fa-stethoscope  icon-size"></i>
+                        <span>ЛЕКАРСТВЕННЫЕ ПРЕПАРАТЫ</span>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-leaf"></i> <span> ВИТАМИНЫ
-                  И БАДЫ</span></a>
+                    <a class="nav-link" href="#"><i class="fas fa-leaf"></i> <span> ВИТАМИНЫИ БАДЫ</span></a>
                 </li>
 
                 <li class="nav-item">
@@ -131,8 +144,27 @@
 <!-- /Categories -->
 
 <!-- Banner -->
-<section class="container-fluid text-center">
-    <img src="https://via.placeholder.com/1440x220?text=1440x220" class="img-fluid" alt="1440x220">
+<section class="container-fluid p-0">
+    <div class="carousel">
+        <div id="carousel-4" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://via.placeholder.com/1440x220?text=1440x220" class="img-fluid" alt="1440x220">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://via.placeholder.com/1440x220?text=1440x220" class="img-fluid" alt="1440x220">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carousel-4" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel-4" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </a>
+        </div>
+    </div>
 </section>
 <!-- /Banner -->
 
@@ -816,9 +848,9 @@
     </div>
 </footer>
 <!-- /Footer -->
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
+
 </body>
 </html>
