--- a/pages/404.html
+++ b/pages/404.html
@@ -13,196 +13,39 @@
           crossorigin="anonymous"/>
     <link rel="stylesheet" href="../css/shared.css">
     <link rel="stylesheet" href="../css/main.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script>
+        $(function () {
+            $("#navbar").load("../partials/header.html");
+            $("#footer").load("../partials/footer.html");
+        });
+    </script>
 </head>
 <body>
-<!-- Header -->
-<div class="container top-layer max-width">
-    <div class="row align-items-center header">
-        <div class="col">
-              <span class="header__phone">
-                <i class="fas fa-phone-alt"></i> <strong>+998971005622</strong>
-              </span>
-        </div>
-        <div class="col text-center header__logo">
-            <img src="./images/logo.svg" alt="Logo">
-        </div>
-        <div class="col">
-            <div class="text-end header__links">
-                <a href="#" class="header__profile">
-                    <i class="fas fa-user"></i> Личный кабинет
-                </a>
-                <a href="#" class="header__register">
-                    <i class="fas fa-lock login-icon"></i> Регистрация
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- /Header -->
 
-<!-- Search -->
-<section class="search-color">
-    <div class="container max-width">
-        <div class="row">
-            <div class="col">
-                <div class="d-flex search">
-                    <!-- Search input -->
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <button class="btn btn-outline-secondary dropdown-toggle btn-dropdown" type="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i
-                                    class="fas fa-bars hamburger-menu"></i>Выбрать категорию
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                                <div role="separator" class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Separated link</a>
-                            </div>
-                        </div>
-                        <input type="text" class="form-control" aria-label="Text input with dropdown button"
-                               placeholder="Поиск товаров...">
-                        <i class="fa fa-search search-position"></i>
-                        <div class="icons d-flex">
-                            <a href="#"><i class="far fa-heart fa-2x coloring"></i></a>
-                            <a href="#"><i class="fas fa-shopping-cart fa-2x coloring"></i></a>
-                        </div>
-                    </div>
-                    <!-- /Search input -->
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- /Search -->
-
-<!-- Categories -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container max-width">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">
-                        <i class="fas fa-stethoscope icon-size"></i><span>ЛЕКАРСТВЕННЫЕ ПРЕПАРАТЫ</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-leaf"></i> <span> ВИТАМИНЫ
-                  И БАДЫ</span></a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-briefcase-medical"></i>МЕДИЦИНСКАЯ
-                        ТЕХНИКА</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-briefcase-medical"></i>МЕДИЦИНСКИЕ
-                        ИЗДЕЛИЯ</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-pump-soap"></i>ЛЕЧЕБНАЯ КОСМЕТИКА</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-pump-soap"></i>СРЕДСТВА ГИГИЕНЫ</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-baby"></i>МАМА
-                        И МАЛЫШ</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-notes-medical"></i>ПИТАНИЕ</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-leaf"></i>ЛЕЧЕБНЫЕ МАСЛА,
-                        ЧАИ И ТРАВЫ</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<!-- /Categories -->
+<div id="navbar"></div>
 
 <!-- Image -->
-<section class="container not-found-page">
-    <div class="container not-found">
-        <p><strong>Страница не найдена</strong><br> Ой, мы не можем найти нужную вам страницу! <br>
-            Вы воспользовались недействительной ссылкой, или страница была удалена.</p>
-        <button>Вернуться к покупкам</button>
-    </div>
-    <div class="container error-page-404">
-        <div class="error-404">
-            <h6>404</h6>
+<section class="container text-center page-404">
+    <div class="row">
+        <div class="col-sm-8 order-last order-sm-first order-last page-404__not-found">
+            <p>
+            <p>
+                <strong>Страница не найдена</strong>
+            </p>Ой, мы не можем найти нужную вам страницу! Вы воспользовались недействительной ссылкой, или страница
+            была удалена.</p>
+            <button>Вернуться к покупкам</button>
         </div>
-        <div class="error-message">
+        <div class="col-sm-4 page-404__code">
+            <h6>404</h6>
             <p>ошибка</p>
         </div>
     </div>
 </section>
 <!-- /Image  -->
 
-<!-- Footer -->
-<footer class="footer">
-    <div class="container footer-element max-width">
-        <div class="info">
-            <h1 class="footer-sizing">ИНФОРМАЦИЯ</h1>
-            <ul class="style-list">
-                <li><a class="style-list-item" href="#">Главная</a></li>
-                <li><a class="style-list-item" href="#">О компании</a></li>
-                <li><a class="style-list-item" href="#">Доставка</a></li>
-                <li><a class="style-list-item" href="#">Контакты</a></li>
-                <li><a class="style-list-item" href="#">Пользовательское соглашение</a></li>
-            </ul>
-        </div>
-        <div class="catalogue">
-            <h1 class="footer-sizing">КАТАЛОГ</h1>
-            <ul class="style-list">
-                <li><a class="style-list-item" href="#">Витамины и БАДы</a></li>
-                <li><a class="style-list-item" href="#">Сахарный диабет</a></li>
-                <li><a class="style-list-item" href="#">Лекарственные препараты</a></li>
-                <li><a class="style-list-item" href="#">Приборы и изделия</a></li>
-            </ul>
-        </div>
-        <div class="mass-market">
-            <h1 class="footer-sizing">МАСС-МАРКЕТ</h1>
-            <ul class="style-list">
-                <li><a class="style-list-item" href="#">Мама и малыш</a></li>
-                <li><a class="style-list-item" href="#">Чаи и травы</a></li>
-                <li><a class="style-list-item" href="#">Гигиенические средства</a></li>
-                <li><a class="style-list-item" href="#">Детское питание</a></li>
-            </ul>
-        </div>
-        <div class="network">
-            <h1 class="footer-sizing">Мобильное приложение MyPharm</h1>
-            <div class="logos">
-                <img src="../images/google-play-logo.svg" alt="">
-                <img src="../images/appstore.png" alt="">
-            </div>
-            <p class="social-par">Мы в социальных сетях</p>
-            <div class="socials">
-                <a href="https://www.facebook.com/">
-                    <i class="fab fa-facebook sizing-social"></i>
-                </a>
-                <a href="https://www.instagram.com/">
-                    <i class="fab fa-instagram sizing-social"></i>
-                </a>
-                <a href="https://www.telegram.com/">
-                    <i class="fab fa-telegram sizing-social"></i>
-                </a>
-            </div>
-            <p class="location"><i class="fas fa-map-marker-alt"></i>Яккасарайский район, ул. Бабура, 74</p>
-        </div>
-    </div>
-</footer>
-<!-- /Footer-->
+<div id="footer"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
 </body>
 </html>
