--- a/pages/404.html
+++ b/pages/404.html
@@ -29,7 +29,7 @@
 <!-- Image -->
 <section class="container text-center page-404">
     <div class="row">
-        <div class="col-sm-8 order-last order-sm-first order-last page-404__not-found">
+        <div class="col-sm-8 order-last order-sm-first  page-404__not-found">
             <p>
             <p>
                 <strong>Страница не найдена</strong>
