--- a/pages/about.html
+++ b/pages/about.html
@@ -134,98 +134,110 @@
 </section>
 
 <!--/Banner-->
-<div class="container max-width container-arrow">
+<div class="container container-arrow">
     <p>Главная</p><span class="arrow"></span>
-    <p>О компании</p><span class="arrow"></span>
+    <p>О компании</p>
 </div>
 
 <!-- Main parts -->
-<div class="container about-main-box">
-    <div class="container about-main-box-1">
-        <h1>О компании</h1>
-    </div>
-    <div class="container about-main-box-2 ">
-        <h1>О нас</h1>
-    </div>
-    <div class="container about-main-box-3">
-        <div class="about-product-title">
-            <p>ПАО «Аптечная сеть 36,6» - лидер в Московском регионе и одна из крупнейших аптечных сетей в стране.
-                Компания существует почти три десятилетия, развивается и укрепляет свои позиции.</p>
-        </div>
-        <div class="about-products-boxes">
-            <div class="about-products-box">
-                <div class="about-product-icon"></div>
-                <h6><strong>Найдите товар</strong></h6>
-                <p>Воспользуйтесь поиском, чтобы найти необходимый товар</p>
+<div class="container company">
+    <h2>О компании</h2>
+    <div class="company__section company__about">
+        <h4>О нас</h4>
+        <div class="company__section-info">
+            <p>ПАО «Аптечная сеть 36,6» - лидер в Московском регионе и одна из крупнейших аптечных сетей в стране. Компания
+                существует почти три десятилетия, развивается и укрепляет свои позиции.</p>
+            <div class="row company__features">
+                <div class="col">
+                    <div class="company__feature">
+                        <img src="../images/about-us-icon-1.svg" alt="About us icon 1">
+                        <h6>Найдите товар</h6>
+                        <p>Воспользуйтесь поиском, чтобы найти необходимый товар</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="company__feature">
+                        <img src="../images/about-us-icon-2.svg" alt="About us icon 2">
+                        <h6>Добавьте товар</h6>
+                        <p>Выбранный товар добавьте в корзину</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="company__feature">
+                        <img src="../images/about-us-icon-3.svg" alt="About us icon 3">
+                        <h6>Оформите заказ</h6>
+                        <p>Заполните поля и завершите оформление заказа</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="company__feature">
+                        <img src="../images/about-us-icon-4.svg" alt="About us icon 4">
+                        <h6>Получите заказ</h6>
+                        <p>Заберите товар любым удобным вам способом</p>
+                    </div>
+                </div>
             </div>
-            <div class="about-products-box">
-                <div class="about-product-icon"></div>
-                <h6><strong>Добавьте товар</strong></h6>
-                <p>Выбранный товар добавьте в корзину</p>
-            </div>
-            <div class="about-products-box">
-                <div class="about-product-icon"></div>
-                <h6><strong>Оформите заказ</strong></h6>
-                <p>Заполните поля и завершите оформление заказа</p>
-            </div>
-            <div class="about-products-box">
-                <div class="about-product-icon"></div>
-                <h6><strong>Получите заказ</strong></h6>
-                <p>Заберите товар любым удобным вам способом</p>
-            </div>
-        </div>
-    </div>
-    <div class="container about-main-box-4 ">
-        <h1>Миссия компании</h1>
-    </div>
-    <div class="container about-main-box-5">
-        <div class="about-paragraph">
-            <p>Основная наша ценность – это человек, его самочувствие и настроение. Каждый день мы работаем для того
-                чтобы как можно больше людей в России могли позволить себе качественные лекарства, товары для красоты и
-                здоровья, которые сделают жизнь легче, радостнее и приятнее.</p>
-        </div>
-        <div class="d-flex justify-content-between padding-all-20">
-            <img src="https://via.placeholder.com/235x185?text=235x185" class="img-fluid" alt="235x185">
-            <img src="https://via.placeholder.com/235x185?text=235x185" class="img-fluid" alt="235x185">
-            <img src="https://via.placeholder.com/235x185?text=235x185" class="img-fluid" alt="235x185">
-            <img src="https://via.placeholder.com/235x185?text=235x185" class="img-fluid" alt="235x185">
         </div>
     </div>
-    <div class="container about-main-box-6 ">
-        <h1 class="about-padding">Наши преимущества</h1>
+    <div class="company__section company__mission">
+        <h4>Миссия компании</h4>
+        <div class="company__section-info">
+            <p>Основная наша ценность – это человек, его самочувствие и настроение. Каждый день мы работаем для того чтобы
+                как можно больше людей в России могли позволить себе качественные лекарства, товары для красоты и здоровья,
+                которые сделают жизнь легче, радостнее и приятнее.</p>
+            <div class="row company__mission-items text-center">
+                <div class="col company__mission_item">
+                    <img src="https://via.placeholder.com/235x185?text=235x185" class="img-fluid" alt="235x185">
+                </div>
+                <div class="col company__mission_item">
+                    <img src="https://via.placeholder.com/235x185?text=235x185" class="img-fluid" alt="235x185">
+                </div>
+                <div class="col company__mission_item">
+                    <img src="https://via.placeholder.com/235x185?text=235x185" class="img-fluid" alt="235x185">
+                </div>
+                <div class="col company__mission_item">
+                    <img src="https://via.placeholder.com/235x185?text=235x185" class="img-fluid" alt="235x185">
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="container about-main-box-7">
-        <p><strong>Качество</strong>
-            В «Аптечной сети 36,6» качество возведено на уровень корпоративной идеологии. В компании существует
-            специальное подразделение - Дирекция по фармацевтическому контролю, которое следит за соблюдением
-            лицензионных требований к продукции, а значит, за тем, чтобы наши покупатели получали эффективные,
-            безопасные и качественные препараты.
-        </p>
-        <p><strong>Цены на товары</strong>
-
-            В аптеках «36,6» регулярно проходят акции и действует бонусная программа, благодаря этому наши постоянные
-            покупатели получают скидки на весь ассортимент.</p>
-        <p><strong> Ассортимент</strong>
-
-            В наших аптеках и на нашем сайте вы найдете широчайший ассортимент лекарственных препаратов, БАДов,
-            косметики, товаров для красоты и здоровья.</p>
-        <p><strong>Большое количество розничных аптек </strong>
-            Наши аптеки расположены по всему городу. Вы всегда можете узнать адрес ближайшего к вам аптечного пункта в
-            нашем приложении или на сайте.</p>
-        <p><strong>Удобный поиск</strong>
-            На нашем сайте и в приложении вы легко найдете любой лекарственный препарат или косметический продукт по
-            названию, производителю или действующему веществу.</p>
-        <p><strong>Бронирование</strong>
-            Бронирование через сервис 366.ru – это выгодные покупки с комфортом. Вы можете выбрать и заказать нужный вам
-            товар онлайн или по телефону, а потом забрать его в той аптеке, где вам удобно.</p>
-        <p><strong>Сервис</strong>
-            Еще одно преимущество «36,6» – это высокий уровень сервиса. Приходя в наши аптеки, вы всегда можете
-            рассчитывать на компетентную консультацию провизоров и фармацевтов, человеческое отношение и приветливую
-            улыбку.</p>
+    <div class="company__section company__advantages">
+        <h4>Наши преимущества</h4>
+        <div class="company__section-info">
+            <p>
+                <strong>Качество</strong>
+                В «Аптечной сети 36,6» качество возведено на уровень корпоративной идеологии. В компании существует специальное подразделение - Дирекция по фармацевтическому контролю, которое следит за соблюдением лицензионных требований к продукции, а значит, за тем, чтобы наши покупатели получали эффективные, безопасные и качественные препараты.
+            </p>
+            <p>
+                <strong>Цены на товары</strong>
+                В аптеках «36,6» регулярно проходят акции и действует бонусная программа, благодаря этому наши постоянные покупатели получают скидки на весь ассортимент.
+            </p>
+            <p>
+                <strong>Ассортимент</strong>
+                В наших аптеках и на нашем сайте вы найдете широчайший ассортимент лекарственных препаратов, БАДов, косметики, товаров для красоты и здоровья.
+            </p>
+            <p>
+                <strong>Большое количество розничных аптек</strong>
+                Наши аптеки расположены по всему городу. Вы всегда можете узнать адрес ближайшего к вам аптечного пункта в нашем приложении или на сайте.
+            </p>
+            <p>
+                <strong>Удобный поиск</strong>
+                На нашем сайте и в приложении вы легко найдете любой лекарственный препарат или косметический продукт по названию, производителю или действующему веществу.
+            </p>
+            <p>
+                <strong>Бронирование</strong>
+                Бронирование через сервис 366.ru – это выгодные покупки с комфортом. Вы можете выбрать и заказать нужный вам товар онлайн или по телефону, а потом забрать его в той аптеке, где вам удобно.
+            </p>
+            <p>
+                <strong>Сервис</strong>
+                Еще одно преимущество «36,6» – это высокий уровень сервиса. Приходя в наши аптеки, вы всегда можете рассчитывать на компетентную консультацию провизоров и фармацевтов, человеческое отношение и приветливую улыбку.
+            </p>
+        </div>
     </div>
 </div>
-
 <!-- Main parts finished -->
+
+
 <!-- Footer -->
 <footer class="footer">
     <div class="container footer-element max-width">
