--- a/pages/articles.html
+++ b/pages/articles.html
@@ -147,7 +147,7 @@
 
 <!-- Producers list -->
 <section class="container articles-main-box max-width p-0 mb-3">
-    <p>Полезные статьи</p>
+    <p class="main-paragraph">Полезные статьи</p>
     <div class="articles-grid-container text-center padding-all-10 pt-3 ">
         <div class="article-grid-item">
             <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
