--- a/pages/login.html
+++ b/pages/login.html
@@ -26,24 +26,24 @@
             </p>
             <img src="../images/google-play-logo.svg" alt="">
             <img src="../images/appstore.png" alt=""><br>
-            <button>Вернуться на главную</button>
+            <button class="return-back-button" >Вернуться на главную</button>
         </div>
       </div>
       <div class="col registration__right">
-        <div class="registration-form" >
-          <h1>Вход в личный кабинет</h1>
+        <div class="primary-form-box" >
+          <h1 class="primary-form-main-title">Вход в личный кабинет</h1>
           <form action="" class="d-flex flex-column">
-            <label for="password">Номер телефона</label>
-            <input type="text" id="number" placeholder="+ 998 (__) ___-__-__">
-            <label for="password">Придумайте пароль</label>
-            <input type="password" id="password" placeholder="Пароль">
+            <label for="phone-number" class="primary-form-label">Номер телефона</label>
+            <input type="text" id="phone-number" placeholder="+ 998 (__) ___-__-__" class="primary-form-input">
+            <label for="password" class="primary-form-label">Придумайте пароль</label>
+            <input type="password" id="password" placeholder="Пароль" class="primary-form-input">
             <div class="d-flex justify-content-between align-items-center">
             <div class="checkbox">
-              <input type="checkbox" name="remember-me" id="rememeber-me" class="mr-4">
-              <label for="remember-me">Запомнить меня</label></div>
+              <input type="checkbox" name="remember-me" id="rememeber-me" class="mr-4 primary-form-input" >
+              <label for="rememeber-me" class="primary-form-label">Запомнить меня</label></div>
             <a href="#" class="m-0 text-decoration-none" style="color: #50BE14;">Забыли пароль?</a>
           </div>
-            <button>Войти</button>
+            <button class="primary-form-button">Войти</button>
           </form>
           <p><a href="#" class="m-0 text-decoration-none" style="color: #50BE14;">Зарегистрируйтесь,</a>
  если у вас еще нет аккаунта.</p>
