--- a/pages/password-recovery.html
+++ b/pages/password-recovery.html
@@ -26,22 +26,21 @@
             </p>
             <img src="../images/google-play-logo.svg" alt="">
             <img src="../images/appstore.png" alt=""><br>
-            <button>Вернуться на главную</button>
+            <button class="return-back-button">Вернуться на главную</button>
         </div>
       </div>
       <div class="col registration__right">
-        <div class="registration-form" >
-          <h1>Восстановление пароля</h1>
+        <div class="primary-form-box" >
+          <h1 class="primary-form-main-title">Восстановление пароля</h1>
           <p>Пожалуйста, введите номер телефона, указанный при регистрации</p>
-          <form action="" class="d-flex send-code mb-3">
-            <input type="text" id="number" placeholder="+ 998 (__) ___-__-__">
-            <button>Отправить код</button>
+          <form action="" class="d-flex  send-code mb-3">
+            <input type="text" id="number" placeholder="+ 998 (__) ___-__-__" class="primary-form-input">
+            <button class="primary-form-button">Отправить код</button>
           </form>
           <form action="" class="d-flex flex-column">
-            <input type="text" id="number" placeholder="Введите полученный код">
-            <button>Войти</button>
+            <input type="text" id="number2" placeholder="Введите полученный код" class="primary-form-input">
+            <button class="primary-form-button">Войти</button>
           </form>
-          
         </div>
       </div>
     </div>
