--- a/pages/registration.html
+++ b/pages/registration.html
@@ -26,23 +26,23 @@
             </p>
             <img src="../images/google-play-logo.svg" alt="">
             <img src="../images/appstore.png" alt=""><br>
-            <button>Вернуться на главную</button>
+            <button class="return-back-button">Вернуться на главную</button>
         </div>
       </div>
       <div class="col registration__right">
-        <div class="registration-form" >
-          <h1>Регистрация</h1>
+        <div class="registration-form primary-form-box" >
+          <h1 class="primary-form-main-title">Регистрация</h1>
           <form action="" class="d-flex flex-column">
-            <label for="name">Имя, фамилия</label>
-            <input type="text" id="name" placeholder="Укажите имя и фамилию">
-            <label for="password">Придумайте пароль</label>
-            <input type="password" id="password" placeholder="Пароль">
-            <input type="password" id="password" placeholder="Придумайте пароль">
-            <label for="password">Номер телефона</label>
-            <input type="text" id="number" placeholder="+ 998 (__) ___-__-__">
+            <label for="name" class="primary-form-label">Имя, фамилия</label>
+            <input type="text" id="name" placeholder="Укажите имя и фамилию" class="primary-form-input primary-form-p">
+            <label for="password" class="primary-form-label">Придумайте пароль</label>
+            <input type="password" id="password" placeholder="Пароль" class="primary-form-input primary-form-p">
+            <input type="password" id="password2" placeholder="Придумайте пароль" class="primary-form-input primary-form-p">
+            <label for="password" class="primary-form-label">Номер телефона</label>
+            <input type="text" id="number" placeholder="+ 998 (__) ___-__-__" class="primary-form-input primary-form-p">
             <p>Captcha</p>
             <p class="m-0">Нажимая на кнопку «Зарегистрироваться», я соглашаюсь с условиями  <span style="color: #50BE14;">пользовательского соглашения</span> </p>
-            <button>Зарегистрироваться</button>
+            <button class="primary-form-button">Зарегистрироваться</button>
           </form>
           <p><span style="color: #50BE14;">Авторизуйтесь,</span> если у вас уже есть аккаунт.</p>
         </div>
