--- a/pages/mobile.404.html
+++ b/pages/mobile.404.html
@@ -13,15 +13,6 @@
           crossorigin="anonymous"/>
     <link rel="stylesheet" href="../css/shared.css">
     <link rel="stylesheet" href="../css/main.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script>
-        $(function () {
-            $("#navbar").load("../partials/header.html");
-            $("#footer").load("../partials/footer.html");
-            $("#mobile-menu").load("../partials/mobile-menu.html");
-        });
-    </script>
 </head>
 <body>
 
@@ -241,9 +232,8 @@
 
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <div id="navbar"></div>
-        <!-- Image -->
-        <section class="container text-center page-404">
+        <section class="container text-center page-404 mobile-container">
+            <img src="../images/logo.svg" alt="Logo">
             <div class="row">
                 <div class="col-sm-8 order-last order-sm-first order-last page-404__not-found">
                     <p>
@@ -259,10 +249,49 @@
                 </div>
             </div>
         </section>
-        <!-- /Image  -->
+        <div id="mobile-navbar">
+            <div class="text-center mobile-search d-none" id="mobile-search-block">
+                <div class="container p-3 mt-3">
+                    <img src="../images/logo.svg" alt="Logo" class="logo">
+                    <div class="input-group search mb-3">
+                        <input type="text" class="form-control" aria-label="Text input with dropdown button"
+                               placeholder="Поиск товаров...">
+                        <button type="submit" class="btn btn-link search-position">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom-mobile-menu d-sm-none">
+                <div class="container-fluid">
+                    <div class="row align-items-center">
+                        <div class="col">
+                            <button class="btn btn-link" id="sidebar-opener" data-sidebar="main-menu">
+                                <img src="../images/list-icon.svg" alt="List icon">
+                            </button>
+                            <button class="btn btn-link" data-sidebar="category">
+                                <img src="../images/category-icon.svg" alt="Category icon">
+                                Каталог
+                            </button>
+                        </div>
+                        <div class="col text-end">
+                            <button class="btn btn-link" id="mobile-search-icon">
+                                <img src="../images/search-icon.svg" alt="Search icon">
+                            </button>
+                            <a href="#" class="bottom-mobile-menu__cart">
+                                <img src="../images/black-cart-icon.svg" alt="Black cart icon">
+                                <span>1</span>
+                            </a>
+                            <a href="#">
+                                <img src="../images/profile-icon.svg" alt="Profile icon">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script src="../js/app.js"></script>
 
-        <div id="footer"></div>
-        <div id="mobile-menu"></div>
 
     </div>
     <!-- /#page-content-wrapper -->
