--- a/pages/mobile.catalog.html
+++ b/pages/mobile.catalog.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
-    <title>MyPharm | 404 </title>
+    <title>MyPharm | Главная - Моб</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -13,19 +13,10 @@
           crossorigin="anonymous"/>
     <link rel="stylesheet" href="../css/shared.css">
     <link rel="stylesheet" href="../css/main.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script>
-        $(function () {
-            $("#navbar").load("../partials/header.html");
-            $("#footer").load("../partials/footer.html");
-            $("#mobile-menu").load("../partials/mobile-menu.html");
-        });
-    </script>
 </head>
-<body>
 
-<div class="d-flex" id="wrapper">
+<body>
+<div class="d-flex toggled" id="wrapper">
 
     <div id="overlay"></div>
 
@@ -34,7 +25,7 @@
         <div class="sidebar-heading">
             <img src="../images/logo.svg" alt="Logo" class="img-fluid">
         </div>
-        <div id="main-menu" class="">
+        <div id="main-menu" class="d-none">
             <div class="list-group list-group-flush">
                 <a href="#" class="list-group-item list-group-item-action">
                 <span>
@@ -111,7 +102,7 @@
                 </p>
             </div>
         </div>
-        <div id="category" class="d-none sidebar__category">
+        <div id="category" class="sidebar__category">
             <div class="list-group list-group-flush">
                 <a href="#" class="list-group-item list-group-item-action">
                 <span>
@@ -241,34 +232,78 @@
 
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <div id="navbar"></div>
-        <!-- Image -->
-        <section class="container text-center page-404">
-            <div class="row">
-                <div class="col-sm-8 order-last order-sm-first order-last page-404__not-found">
-                    <p>
-                    <p>
-                        <strong>Страница не найдена</strong>
-                    </p>Ой, мы не можем найти нужную вам страницу! Вы воспользовались недействительной ссылкой, или страница
-                    была удалена.</p>
-                    <button type="button" class="btn">Вернуться к покупкам</button>
+        <div class="d-block d-sm-none custom-bg-light full-viewport-height mobile-main">
+            <div class="container mobile-container text-center">
+                <img src="../images/logo.svg" alt="Logo" class="logo">
+                <form action="">
+                    <div class="input-group search mb-3">
+                        <input type="text" class="form-control" aria-label="Text input with dropdown button"
+                               placeholder="Поиск лекарств, медтехники, косметики...">
+                        <button type="submit" class="btn btn-link search-position">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </div>
+                </form>
+                <div class="mobile-main__images d-flex justify-content-between">
+                    <img src="../images/135x70.png" alt="135x70">
+                    <img src="../images/135x70.png" alt="135x70">
                 </div>
-                <div class="col-sm-4 page-404__code">
-                    <h6>404</h6>
-                    <p>ошибка</p>
+                <div class="mobile-main__images d-flex justify-content-between">
+                    <img src="../images/135x70.png" alt="135x70">
+                    <img src="../images/135x70.png" alt="135x70">
                 </div>
             </div>
-        </section>
+        </div>
         <!-- /Image  -->
 
-        <div id="footer"></div>
-        <div id="mobile-menu"></div>
-
+        <div id="mobile-navbar">
+            <div class="text-center mobile-search d-none" id="mobile-search-block">
+                <div class="container p-3 mt-3">
+                    <img src="../images/logo.svg" alt="Logo" class="logo">
+                    <div class="input-group search mb-3">
+                        <input type="text" class="form-control" aria-label="Text input with dropdown button"
+                               placeholder="Поиск товаров...">
+                        <button type="submit" class="btn btn-link search-position">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom-mobile-menu d-sm-none">
+                <div class="container-fluid">
+                    <div class="row align-items-center">
+                        <div class="col">
+                            <button class="btn btn-link" id="sidebar-opener" data-sidebar="main-menu">
+                                <img src="../images/list-icon.svg" alt="List icon">
+                            </button>
+                            <button class="btn btn-link" data-sidebar="category">
+                                <img src="../images/category-icon.svg" alt="Category icon">
+                                Каталог
+                            </button>
+                        </div>
+                        <div class="col text-end">
+                            <button class="btn btn-link" id="mobile-search-icon">
+                                <img src="../images/search-icon.svg" alt="Search icon">
+                            </button>
+                            <a href="#" class="bottom-mobile-menu__cart">
+                                <img src="../images/black-cart-icon.svg" alt="Black cart icon">
+                                <span>1</span>
+                            </a>
+                            <a href="#">
+                                <img src="../images/profile-icon.svg" alt="Profile icon">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- /#page-content-wrapper -->
 
 </div>
 <!-- /#wrapper -->
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
 </body>
 </html>
